Change toList() to collectors